--- a/DataFest.Rmd
+++ b/DataFest.Rmd
@@ -4,7 +4,9 @@ output: github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(knitr)
+library(broom)
 ```
 
 ## R Markdown
